--- a/aboutus.css
+++ b/aboutus.css
@@ -106,11 +106,11 @@ body{
 	max-width: 100%; /* Maximum width */
 	margin-left: 0; /* Center it */
 	height: 500px;
-	color: black;
+	color: white;
 	font-family: 'Barrio';
 	text-align: center;
 	font-size: 40px;
-	background:#c5dbf2;
+	background:#000033;
 }
 
 .image {
@@ -134,7 +134,7 @@ body{
 	
   }
   #abc{
-	background: #c5dbf2
+	background: #000033
   }
 
   #a, #g {
