--- a/Navigation.css
+++ b/Navigation.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	font-family: 'Work Sans', sans-serif;
 	font-weight: 800;
-	color:#f2f2f2;
+	color:#f2f2f2 ;
 }
 
 .container1 {
@@ -91,3 +91,4 @@ footer a {
 
 
 
+#000033
