--- a/aboutus.css
+++ b/aboutus.css
@@ -126,7 +126,7 @@ body{
 	margin: 0 auto; /* Center it */
 	background-color:white;
 	color: black;
-	font-family: 'Baumans';
+	font-family: 'Angkor';
 	/*font-family: 'Buenard';
 	font-size: 22px;
 */
@@ -141,7 +141,7 @@ body{
     background-color:#f2f2f2;
     color: black;
 	list-style: none;
-	font-family: 'Baumans';
+	font-family: 'Angkor';
 }
 
 .pic {
