--- a/aboutus.css
+++ b/aboutus.css
@@ -129,7 +129,7 @@ body{
 	margin: 0 auto; /* Center it */
 	background-color:white;
 	color: black;
-	font-family: 'Lora';
+	font-family: 'Consolof';
 	/*font-family: 'Buenard';
 	font-size: 22px;
 */
@@ -166,4 +166,4 @@ body{
 
 
 
-  
+font-family: 'Lora'
