--- a/aboutus.css
+++ b/aboutus.css
@@ -137,7 +137,7 @@ body{
 	
   }
   #abc{
-	background: #000033
+	background: #563f46
   }
 
   #a, #g {
@@ -164,7 +164,8 @@ body{
 
 
 
-
+background: #000033
+  
 
 font-family: 'Lora'
 background:#333945
