--- a/aboutus.css
+++ b/aboutus.css
@@ -41,9 +41,9 @@ body{
 
 .heading {
 	align-items: right;
-	   max-width: 500%; /* Maximum width */
+	   max-width: 500%;  Maximum width 
 	 height: 100px;  
-	   margin: 0 auto; /* Center it */
+	   margin: 0 auto; Center it */
 	  /* background:  #777575;*/
 /*	  background:  whitesmoke;
 	   text-decoration-color: black;
